--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
 
 <body>
     <header class="header">
-        <div class="container"></div>
+        <div class="container">
+            <nav class="header__nav">
+                <ul class="header__links">
+                    <li class="header__link"><a class="link" href="#">Home</a></li>
+                    <li class="header__link"><a class="link" href="#">Gallery</a></li>
+                    <li class="header__link"><a class="link" href="#">About</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header__slider">
+
+        </div>
     </header>
 </body>
 
