--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
             </nav>
         </div>
         <div class="header__slider">
-
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="swiper-content">
+                            <img class="spin" src="/src/img/planets/earth.png" alt="earth">
+                            <div class="slide-text">
+                                <!-- <h2 class="title-h2 text-stroke">Earth</h2>
+                                <h2 class="title-h2 text-fill">Earth</h2> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide"><img class="spin" src="/src/img/planets/mars.png" alt="mars"></div>
+                    <div class="swiper-slide"><img class="spin" src="/src/img/planets/moon.png" alt="moon"></div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
         </div>
     </header>
 </body>
